# pdf417-scanner

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: error.rs  lib.rs  main.rs
src/cmds/: decode.rs  gen_samples.rs  mod.rs
tests/: main.py  pyproject.toml
tests/fixtures/: people.json
wix/: main.wxs
