[tool.poetry]
name = "testgenerator"
version = "0.1.0"
description = ""
authors = ["Ari <me@ari.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdf417gen = "^0.8.0"
faker = "^28.0.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
